Name:                mynd
Version:             0.1
Synopsis:            Mind organizer tool
Description:         Mind organizer tool
License:             MIT
License-file:        LICENSE
Author:              Andrey Yankin
Maintainer:          yankin013@gmail.com
Build-type:          Simple
Cabal-version:       >=1.2


Executable mynd
  Main-is:           MyndMain.hs
  Build-depends:     base >= 3 && < 5,
                     GLFW-b >= 0.1.0.2,
                     OpenGL >=2.5.0.0,
                     reactive-banana >= 0.4.3.1,
                     time >= 1.4.0.1,
                     FTGL >= 1.333
  hs-source-dirs:    src
